# models/user.go
@@ -72,14 +72,14 @@ func UpdateUser(uid string, uu *User) (a *User, err error) {
 	return nil, errors.New("User Not Exist")
 }
 
-func Login(username, password string) bool {
-	for _, u := range UserList {
-		if u.Username == username && u.Password == password {
-			return true
-		}
-	}
-	return false
-}
+// func Login(username, password string) bool {
+// 	for _, u := range UserList {
+// 		if u.Username == username && u.Password == password {
+// 			return true
+// 		}
+// 	}
+// 	return false
+// }
 
 func DeleteUser(uid string) {
 	delete(UserList, uid)
